--- a/forum/static/forum/css/parallel.css
+++ b/forum/static/forum/css/parallel.css
@@ -1,19 +1,22 @@
 /* Custom CSS Goes Here */
 
 .post_info {
-    background-color: #F0F0F0;
+    background-color: #F5F5F5;
+    padding: 5px;
 }
 
 .post_text {
-    background-color: #FFFFFF;
+    /* background-color: #FFFFFF; */
     vertical-align: top;
     text-align: left;
-    padding: 10px;
+    padding: 15px;
+    margin: 5px;
 }
 
 .post_options {
     text-align: right;
-    background-color: #FAFAFA;
+    padding: 10px;
+    /* background-color: #FAFAFA; */
 }
 
 table {
@@ -22,4 +25,23 @@ table {
 
 .post {
     width: 100%;
+}
+
+#auth_modal {
+    background-color: #efefef;
+    padding: 20px;
+}
+
+#auth_modal .tabs-content {
+    padding: 20px;
+    background-color: #ffffff;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+
+/* Overriding Foundation defaults */
+.reveal-modal {
+    border-radius: 5px;
+    border-width: 0px;
 }
