Breadcrumbs and subtags implemented.

--- a/forum/templates/forum/views/topic.html
+++ b/forum/templates/forum/views/topic.html
@@ -1,11 +1,7 @@
 
 <div class="row">
     <div class="row">
-        <div class="small-12 columns">
-            <ul class="breadcrumbs">
-                <li><a href="#">Parent Tags</a></li>
-            </ul>
-        </div>
+        {% include 'forum/partials/breadcrumbs.html' %}
     </div>
     <div class="small-12 columns">
         <h3>
