--- a/forum/templates/forum/views/tag.html
+++ b/forum/templates/forum/views/tag.html
@@ -1,11 +1,7 @@
 
 <div class="row">
     <div class="row">
-        <div class="small-12 columns">
-            <ul class="breadcrumbs">
-                <li><a href="#">Parent Tags</a></li>
-            </ul>
-        </div>
+            {% include 'forum/partials/breadcrumbs.html' %}
     </div>
     <div class="small-12 columns">
         <div class="row">
@@ -14,11 +10,7 @@
             </h3>
             <div class="small-11 small-centered columns">
                 <div class="row">
-                    <div class="small-12 columns">
-                        <ul class="breadcrumbs">
-                            <li><a href="#">Home</a></li>
-                        </ul>
-                    </div>
+                    {% include 'forum/partials/subtags.html' %}
                 </div>
                 <table id="topics" class="responsive" width='100%'>
                     <thead>
