Possibly lots of updates. Pagination (almost).

--- a/forum/templates/forum/container.html
+++ b/forum/templates/forum/container.html
@@ -16,6 +16,9 @@
         <script src="{% static "forum/js/vendor/modernizr.js" %}"></script>
         <script src="{% static "forum/js/vendor/jquery.js" %}"></script>
         
+        {# Parallel Specific JS #}
+        <script src="{% static "forum/js/parallel/parallel.js" %}"></script>
+        
     </head>
 
     <body>
